Change History
**************

1.4.1 (xxxx-xx-xx)
==================

 - Fixed the filename handling for ``download-only = true``. The filename
   hashing introduced in 1.4.0 resulted in the names of the downloaded files
   to be hashed also. Now the original filename is preserved regardless
   whether filenames are hashed in the download cache. This closes
   http://github.com/hexagonit/hexagonit.recipe.download/issues#issue/2
   [dokai]

1.4.0 (2010-04-06)
==================

 - Changed the download policy to hash the downloaded filenames by default.
   You can revert back to the original behavior by setting a ``hash-name =
   false`` parameter in the section using the recipe. This closes
   http://github.com/hexagonit/hexagonit.recipe.download/issues#issue/1
   [dokai]

1.3.0 (2009-09-20)
==================

 - Removed support for the deprecated ``download-directory``
   option. [dokai]

 - Refactored the download logic to use the `Download API`_ in
   zc.buildout. We now require zc.buildout >= 1.4.0. [dokai]

.. _`Download API`: http://pypi.python.org/pypi/zc.buildout#using-the-download-utility


1.2.2 (2009-08-17)
==================

 - Merged the current trunk (revision 79982) from the Plone Collective
   Subversion repository. The collective repository is now abandoned and the
   Github repository is the canonical one. [dokai]

 - Open files in binary mode when calculating MD5 checksums. This fixes a
   bug with checksums on the Windows platform. Bug report and patch thanks to
   Alexander Ivanov. [dokai]

1.2.1 (2008-04-13)
==================

 - Rename the buildout ``download-directory`` option to ``download-cache``
   (which is the name used by buildout) [thefunny]

 - Added BBB support for the ``download-directory`` option. It will
   emit a deprecation warning and set the ``download-cache`` option
   accordingly. [dokai]

1.2.0 (2008-01-19)
==================

 - Added the `download-only` option to allow downloading arbitrary
   files. [dokai]
